2007-02-19  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_process.c: (test_process):
	  improve the tests a little (more to come)

2007-02-19  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  start a list of machines that don't work yet

2007-02-19  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper1/wine/module.c: (LoadLibraryExA):
	  fix logging

2007-02-19  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  add AM_PROG_AS to fix "am__fastdepCCAS does not appear in
	  AM_CONDITIONAL", spotted by Daniel Oberhoff

2007-01-26  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  configure cleanups

2006-11-26  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* src/BuzzMachineLoader.dll:

2006-11-26  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  new version

2006-11-25  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  new version

	* src/bml.c: (bml_init):
	* src/bml.h:
	* src/bmltest_info.c: (test_info):
	* src/bmltest_process.c: (test_process):
	  add two new params fro bm_init

2006-11-12  Stefan Kost  <ensonic@users.sf.net>

	* src/bml.c:
	  TODO comments

2006-11-01  Stefan Kost  <ensonic@users.sf.net>

	* .cvsignore:
	  ignore more

	* dllwrapper1/wine/module.c: (MODULE_LoadLibraryExA),
	(LoadLibraryExA):
	* dllwrapper1/wine/win32.c: (test_heap), (my_mreq), (my_release),
	(mreq_private), (ext_unknown), (expCreateThread), (destroy_event),
	(expCreateEventA), (expHeapCreate), (expHeapAlloc), (expHeapFree),
	(expVirtualAlloc), (expInitializeCriticalSection),
	(expEnterCriticalSection), (expLeaveCriticalSection),
	(expDeleteCriticalSection), (expLocalAlloc), (expGlobalAlloc),
	(expGlobalSize), (expCreateSemaphoreA), (expGetModuleFileNameA),
	(expCreateWindowExA), (expGetPrivateProfileIntA),
	(expWritePrivateProfileStringA), (expGetEnvironmentVariableA),
	(UnregisterComClass), (expIsRectEmpty), (expFindNextFileA),
	(expFindFirstFileA), (expCreateFileA), (expmalloc), (expcalloc),